# nTerm

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
src/: cli.yml  display.rs  err.rs  lib.rs  main.rs  prelude.rs
src/key/: mod.rs
src/spawn/: mod.rs
src/state/: mod.rs
