[package]
name = "nterm"
version = "0.1.0"
authors = [
  "adjivas <adjivas@users.noreply.github.com>",
]
readme = "README.md"
keywords = ["nterm", "terminal", "neko", "term"]
license = "GPL-3.0"

[[bin]]
name = "n-term"
test = false

[features]
default           = []
lints             = ["clippy", "nightly"]
nightly           = [] # for building with nightly and unstable features
unstable          = [] # for building with unstable features on stable Rust
debug             = [] # for building with debug messages
travis            = ["lints", "nightly"] # for building with travis-cargo

[dependencies]
gfx               = "0.13"
freetype-rs       = "0.11"
gfx_window_glutin = "0.13.1"
gfx_device_gl     = "0.12"
glutin            = "0.7.1"

[dependencies.clippy]
version           = "*"
optional          = true

[dependencies.gfx_text]
version           = "*"
default-features  = false

[dependencies.itertools]
version           = "0.5"

[dependencies.neko]
git               = "https://github.com/Arukana/Neko.git"

[dependencies.clap]
version = "*"
features = ["yaml", "suggestions", "color"]
