[package]
name = "nterm"
version = "0.1.0"
authors = ["adjivas <adjivas@users.noreply.github.com>"]
readme = "README.md"
keywords = ["nterm", "terminal", "neko", "term"]
license = "GPL-3.0"

[[bin]]
name = "n-term"
test = false

[features]
default           = []
lints             = ["clippy", "nightly"]
nightly           = [] # for building with nightly and unstable features
unstable          = [] # for building with unstable features on stable Rust
debug             = [] # for building with debug messages
travis            = ["lints", "nightly"] # for building with travis-cargo

[dependencies.clippy]
version = "*"
optional = true

[dependencies.neko]
git = "https://github.com/Arukana/Neko.git"

[dependencies.piston2d-graphics]
version = "0.19"

[dependencies.piston_window]
version = "0.61"

[dependencies.gfx_device_gl]
version = "0.12"

[dependencies.piston2d-gfx_graphics]
version = "0.35"

[dependencies.itertools]
version = "0.5"

[dependencies.libc]
version = "0.2"

[dependencies.clap]
version = "*"
features = ["yaml", "suggestions", "color"]
